# ChangeLog for x11-misc/xfce4-notifyd
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xfce4-notifyd-0.1.0 (25 Nov 2008)

  25 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-notifyd-0.1.0.ebuild:
  Added 0.1.0

*xfce4-notifyd-9999 (25 Nov 2008)

  25 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-notifyd-9999.ebuild:
  Initial import
