@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST xfce4-notifyd-0.1.0.tar.bz2 165593 RMD160 2eb552ca6124ee055dbd820a68c711717be533a1 SHA1 18dd2a327df25880c3975b470b8b998fd6bf69ef SHA256 989b0e9ae9ff5bdbdbf56368a44eca039236033f84d05001e311c21c988bd0e1
-EBUILD xfce4-notifyd-0.1.0.ebuild 641 RMD160 c060b61877d08992759429a5e2fd51d7b57fb713 SHA1 421c1504e5f99093091874c532f2535be69b6d58 SHA256 034a1097101ba41d6415081a16bcfdb2d816ee5c5e827c8735f65e7650ebe0a6
-EBUILD xfce4-notifyd-9999.ebuild 603 RMD160 a5d6fcf06f7e2edb24a75fa326a387f0e58fe746 SHA1 b248da263d8fc12ae61179afaf60e96f22bc548e SHA256 4b736463ecab96c83bfa06caed47c2b601c001f4e14523902a9caf9fa84429cb
-MISC ChangeLog 392 RMD160 10f140804b1b11010248e786b3468672a3059c03 SHA1 a6dd0bf60328e6c50afbbec64d5428264c341119 SHA256 45ded827daf7e41b57b74578b4b7c0f92a024102d716b3a218dfd6ede838bb41
-MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
+EBUILD xfce4-notifyd-0.1.0.ebuild 646 RMD160 2bdc1c9b08640e3e140e1623d911b3f43f97cc79 SHA1 28577da360480bccf872fba19f7e5c9db623066f SHA256 40c2b0764d355f5d55cc4071a0f034d944ed270bd39a37f8665d107b821d2b03
+EBUILD xfce4-notifyd-9999.ebuild 608 RMD160 ab7cb2441f395f7c7fba0d58c0acfad4802576ff SHA1 00a2587d36c67d46b7ca8e270382a30e7532ba1c SHA256 5edf3770184e1a47950fd846324622924100aa84df631c2bd8f3e0224e56cebe
+MISC ChangeLog 575 RMD160 0ea9c58361d72fd2022e55bf85c1ec6c5fa45163 SHA1 55c9c7dde5e05c723b5f51a30e84f8f8558b548c SHA256 36270e8c7105c04e45a44448942c2f5e74c4e747c11893b5899bbdb97308b1d4
+MISC metadata.xml 247 RMD160 319fb586335b2ad6e2b964c0b7db75faf0f0c5ad SHA1 aa6033cb7144df97f9a64fc1a617c35f38e866cc SHA256 0c4015d2e1cbfcb1d35b37e74b3b60e3761c8252b02f702b34ad189c2cbed507
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkr4SMACgkQKhnDs22gwa8+CgCfXKypaJhHOtGhtOXNYzXvvQ/S
-fWwAnipuoN081rL3SKWt1/oz1zrMb5oA
-=XqKQ
+iEYEARECAAYFAkkr4jYACgkQKhnDs22gwa/zTQCeLV8LcZI2J++qCGx4lII5Ng3a
+SmsAoMdIkG9CDOuh3dJ0o4DxOVTGhlVk
+=h5OF
 -----END PGP SIGNATURE-----
