@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>xfce</herd>
+<use>
+  <flag name="libsexy">Enable support for <pkg>x11-libs/libsexy</pkg></flag>
+</use>
 </pkgmetadata>
