@@ -11,7 +11,7 @@ XFCE_VERSION="4.5.92"
 DESCRIPTION="Xfce4 notification daemon"
 HOMEPAGE="http://spuriousinterrupt.org/projects/xfce4-notifyd"
 SRC_URI="http://spuriousinterrupt.org/files/${PN}/${P}.tar.bz2"
-KEYWORDS="~amd64"
+KEYWORDS="~amd64 ~x86"
 IUSE="debug libsexy"
 
 RDEPEND="dev-libs/dbus-glib
