@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Nov 2008; Christoph Mende <angelos@gentoo.org> metadata.xml,
+  xfce4-notifyd-0.1.0.ebuild, xfce4-notifyd-9999.ebuild:
+  Added missing description for USE=libsexy and added ~x86
+
 *xfce4-notifyd-0.1.0 (25 Nov 2008)
 
   25 Nov 2008; Christoph Mende <angelos@gentoo.org>
